--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td><img src="aboo-modified.png" alt="aboo pic"></td>
+      <td><img src="images/aboo-modified.png" alt="aboo pic"></td>
       <td>
         <H1>Avshalom zabary</h1>
         <p><em>Full <strong>stack</strong></em></p>
